--- a/website/app/index.html
+++ b/website/app/index.html
@@ -6,14 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="scripts/modernizr-custom.js" charset="utf-8"></script>
     <script src="scripts/lib/angular.min.js" charset="utf-8"></script>
+    <script src="scripts/lib/angular-ui-router.min.js" charset="utf-8"> </script>
     <script src="../../node_modules/angular-animate/angular-animate.js" charset="utf-8"></script>
     <script src="scripts/lib/ui-bootstrap.js" charset="utf-8"></script>
-    <script src="scripts/lib/ctrl.js" charset="utf-8"></script>
+    <script src="scripts/lib/A-homeCtrl.js" charset="utf-8"></script>
     <link rel="stylesheet" href="css/lib/bootstrap.min.css" media="screen" title="no title">
     <link rel="stylesheet" href="css/all.css" media="screen" title="no title">
   </head>
   <body>
-    <main id="page" ng-app="SmartVetApp">
+    <main id="page" ng-app="smartVetApp">
       <header ng-controller="mainCtrl">
         <nav class="navbar navbar-default bg-warning">
           <div class="container">
@@ -24,11 +25,11 @@
                 </div>
                 <div id="navbar" uib-collapse="isCollapsed" class="navbar-collapse">
                   <ul class="nav navbar-nav navbar-right text-uppercase">
-                    <li><a href="#" class="align-center">Главная</a></li>
-                    <li><a href="#" class="align-center">О клинике</a></li>
-                    <li><a href="#" class="align-center">Вет Аптека</a></li>
-                    <li><a href="#" class="align-center">Вопросы и ответы</a></li>
-                    <li><a href="#" class="align-center">Контакты</a></li>
+                    <li><a href="#/home" class="align-center">Главная</a></li>
+                    <li><a href="#/about" class="align-center">О клинике</a></li>
+                    <li><a href="#/farmacy" class="align-center">Вет Аптека</a></li>
+                    <li><a href="#/faq" class="align-center">Вопросы и ответы</a></li>
+                    <li><a href="#/contacts" class="align-center">Контакты</a></li>
                   </ul>
                 </div>
               </div>
@@ -36,6 +37,7 @@
           </div>
         </nav>
       </header>
+      <div ui-view></div>
       <footer class="navbar-default">
         <div class="container">
           <div class="row">
